--- a/requirements.txt
+++ b/requirements.txt
@@ -97,15 +97,10 @@ sympy==1.12
 tenacity==8.2.3
 tensorboard==2.15.1
 tensorboard-data-server==0.7.2
-tensorflow==2.15.0
-tensorflow-estimator==2.15.0
-tensorflow-io-gcs-filesystem==0.34.0
-tensorflow-macos==2.15.0
 termcolor==2.4.0
 threadpoolctl==3.2.0
 toml==0.10.2
-toolz==0.12.0
-torch==2.1.2
+toolz==0.12.0gi
 tornado==6.4
 traitlets==5.14.0
 typing_extensions==4.9.0
